[gd_scene load_steps=7 format=3 uid="uid://iybccg4r3rrs"]

[ext_resource type="PackedScene" uid="uid://ia6att62w044" path="res://src/menu/base_submenu_with_party.tscn" id="1_cq4cl"]
[ext_resource type="Script" uid="uid://1ly1j2b5wimr" path="res://src/menu/skill_up_submenu.gd" id="2_hgwl5"]
[ext_resource type="FontVariation" uid="uid://vk82c4oiprta" path="res://theme/font_variation/spaced.tres" id="3_v72bv"]

[sub_resource type="LabelSettings" id="LabelSettings_ta2kv"]
font = ExtResource("3_v72bv")
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3nrdp"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.301961, 0.380392, 0.376471, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v72bv"]
content_margin_left = 4.0
content_margin_right = 4.0
bg_color = Color(0.160784, 0.145098, 0.133333, 1)

[node name="SkillUpSubMenu" instance=ExtResource("1_cq4cl")]
script = ExtResource("2_hgwl5")

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer" index="1"]
offset_left = 136.0
offset_top = 32.0
offset_right = 480.0
offset_bottom = 304.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer" index="0"]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer" index="0"]
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 4

[node name="Space1" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="0"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = " "
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 2

[node name="LabelTemplate3" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="1"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3nrdp")
text = "肉体"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 1

[node name="LabelTemplate4" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3nrdp")
text = "技術"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 1

[node name="LabelTemplate5" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="3"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3nrdp")
text = "精神"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 1

[node name="LabelTemplate6" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="4"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_v72bv")
text = " 経験点"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 2

[node name="PhyExp" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="5"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3nrdp")
text = " 000"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 2

[node name="TecExp" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3nrdp")
text = " 000"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 2

[node name="MndExp" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/GridContainer" index="7"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3nrdp")
text = " 000"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="SkillList" type="GridContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 1
theme_override_constants/v_separation = 1
columns = 4

[node name="ButtonTemplate" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SkillList" index="0"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "test"

[node name="LabelTemplate" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/SkillList" index="1"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_3nrdp")
text = "000"
label_settings = SubResource("LabelSettings_ta2kv")
horizontal_alignment = 2
